2002-04-19  Lauris Kaplinski  <lauris@ximian.com>

	* src/text-context.c (sp_text_context_root_handler): Port to new
	text object (incomplete)
	(sp_text_context_selection_changed): Ditto

	* src/sp-text.c: Lot of new stuff, shows something on screen at last

	* src/sp-object.c (sp_object_modified): Do not allow reentrancy
	- think SPText will like it

	* src/sp-item.c: Removed sp_item_update and virtual method

	* src/sp-item-group.c: Removed ::update method

2002-04-17  Lauris Kaplinski  <lauris@ximian.com>

	* src/sp-rect.c (sp_rect_rx_set): Make argument const, kill warning
	(sp_rect_ry_set): Ditto

2002-04-12  Lauris Kaplinski  <lauris@ximian.com>

	* src/sp-text.h: Broke into SPText, SPTSpan and SPString objects

	* src/sp-text.c (sp_text_build): Build <tspan> and TEXT elements

	* src/forward.h: Moved SPText and SPTSpan here

2002-04-08  Lauris Kaplinski  <lauris@ximian.com>

	* src/sp-item.h: Changed ::bbox signature

	* src/sp-item.c (sp_item_invoke_bbox): New generic method
	(sp_item_bbox_desktop): renamed old method

	* src/display/nr-arena-glyphs.c: Ditto

	* src/display/nr-arena-glyphs.h: New file

	* src/sp-chars.c (sp_chars_get_type): Change parent class
	(sp_chars_class_init): Ditto
	(sp_chars_destroy): New elements structure
	(sp_chars_style_modified): New virtual method
	(sp_chars_bbox): Ditto
	(sp_chars_show): Ditto
	(sp_chars_print): Ditto (not implemented)
	(sp_chars_clear): New structure
	(sp_chars_add_element): Ditto

	* src/sp-chars.h: Derive directly from item instead of shape

	* src/dialogs/align.c (sp_quick_align_arrange): New bbox logic

	* src/dialogs/export.c (sp_export_drawing): New bbox logic

Sun Apr  7 01:37:29 2002  Mitsuru Oka  <oka326@parkcity.ne.jp>

	* src/style.c: (sp_style_read_from_object): Fixed to work stroke-cmyk.

	* src/sp-item.c: (sp_item_read_attr): Ditto

2002-04-06  Lauris Kaplinski  <lauris@ximian.com>

	* src/xml/repr-io.c (sp_repr_read_file): Use new signature
	(sp_repr_read_mem): Ditto